tests/baselines/reference/noUnusedLocals_writeOnly.errors.txt
tests/cases/compiler/noUnusedLocals_writeOnly.ts(1,12): error TS6133: 'x' is declared but its value is never read.
tests/cases/compiler/noUnusedLocals_writeOnly.ts(10,9): error TS6133: 'z' is declared but its value is never read.


==== tests/cases/compiler/noUnusedLocals_writeOnly.ts (2 errors) ====
    function f(x = 0) {
               ~
!!! error TS6133: 'x' is declared but its value is never read.
        x = 1;
        x++;
        x /= 2;
    
        let y = 0;
        // This is a write access to y, but not a write-*only* access.
        f(y++);
    
        let z = 0;
            ~
!!! error TS6133: 'z' is declared but its value is never read.
        f(z = 1); // This effectively doesn't use `z`, values just pass through it.
    }
    